feat: allow setting build/run options for `app install` (#1754)
Fixes #1737